--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,11 +7,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="./pokemon.ico" type="image/x-icon">
+
     <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600&display=swap"
     rel="stylesheet">
 
-    <title>Teste de Redux</title>
+    <title>Create Pokedex</title>
   </head>
   <body>
     
